--- a/src-frontend/Components/Pages/Home.razor
+++ b/src-frontend/Components/Pages/Home.razor
@@ -1,7 +1,19 @@
 ﻿@page "/"
+@inject DataService DataService
 
 <PageTitle>Home</PageTitle>
 
 <h1>Hello, world!</h1>
 
 Welcome to your new app.
+
+<button @onclick="(e) => AddToStorage(testInput)">Upload test blob to storage</button>
+
+@code {
+    string testInput = "Testing testing..."; 
+
+    private void AddToStorage(string data)
+    {
+        DataService.AddToStorage(data);
+    }
+}
