--- a/src-frontend/Components/Pages/Home.razor
+++ b/src-frontend/Components/Pages/Home.razor
@@ -1,19 +1,36 @@
 ﻿@page "/"
+@using src_frontend.Models
 @inject DataService DataService
 
 <PageTitle>Home</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>Dupont newsletter</h1>
 
-Welcome to your new app.
+<div>
+    <input type="email" @bind="emailAddressInput" />
+    <button @onclick="AddToStorage">Sign up!</button>
+</div>
 
-<button @onclick="(e) => AddToStorage(testInput)">Upload test blob to storage</button>
+@if (errorIsVisible)
+{
+    <p style="color:red; font-weight:bold;">Please enter a valid email address!</p>
+}
 
 @code {
-    string testInput = "Testing testing..."; 
+    string? emailAddressInput;
+    bool errorIsVisible = false;
 
-    private void AddToStorage(string data)
+    private void AddToStorage()
     {
-        DataService.AddToStorage(data);
+        if (emailAddressInput == null)
+        {
+            errorIsVisible = true;
+        }
+        else
+        {
+            errorIsVisible = false;           
+            DataService.AddToStorage(emailAddressInput);
+            emailAddressInput = null;
+        }
     }
 }
